Gpencil - Circle guide activation with shortcut "C" is not working properly. #63513

Closed
opened 2019-04-12 06:26:12 +02:00 by (Deleted) · 6 comments
(Deleted) commented 2019-04-12 06:26:12 +02:00 (Migrated from localhost:3001)

System Information
Operating system: Windows-10-10.0.14393 64 Bits
Graphics card: Intel(R) HD Graphics 4400 Intel 4.3.0 - Build 20.19.15.4835

Blender Version
Broken: version: 2.80 (sub 55), branch: master (modified), commit date: 2019-04-10 15:33, hash: a3b88c9172
Worked: (optional)

Short description of error
After entering guides using C key the first circle that is drawn is always off the view port area. From second circle onwards it gets drawn at intended place.
This is not the case with Radial line guides when we hit C for second while still the circle guides are active.
refer screen capture to see the problem.

Exact steps for others to reproduce the error

  1. Open new 2D Animation.
  2. Click C to activate guides
  3. Try to draw the circle (now the circle should be drawn out of camera region)
  4. Press C again to switch to radial line guides and draw few lines (the lines will be at desired locations)
  5. Press C again to switch to Circle guides and try draw the circle (the first circle is drawn out of the view port area)

But i after C keypress to activate circle guides if I mouse click on some menu tabs or even space bar then the circle guides are properly activated and drawn and intended place.
CircleGuides.gif

**System Information** Operating system: Windows-10-10.0.14393 64 Bits Graphics card: Intel(R) HD Graphics 4400 Intel 4.3.0 - Build 20.19.15.4835 **Blender Version** Broken: version: 2.80 (sub 55), branch: master (modified), commit date: 2019-04-10 15:33, hash: `a3b88c9172` Worked: (optional) **Short description of error** After entering guides using C key the first circle that is drawn is always off the view port area. From second circle onwards it gets drawn at intended place. This is not the case with Radial line guides when we hit C for second while still the circle guides are active. refer screen capture to see the problem. **Exact steps for others to reproduce the error** 1. Open new 2D Animation. 2. Click C to activate guides 3. Try to draw the circle (now the circle should be drawn out of camera region) 4. Press C again to switch to radial line guides and draw few lines (the lines will be at desired locations) 5. Press C again to switch to Circle guides and try draw the circle (the first circle is drawn out of the view port area) But i after C keypress to activate circle guides if I mouse click on some menu tabs or even space bar then the circle guides are properly activated and drawn and intended place. ![CircleGuides.gif](https://archive.blender.org/developer/F6933309/CircleGuides.gif)
(Deleted) commented 2019-04-12 06:26:12 +02:00 (Migrated from localhost:3001)
Author

Added subscriber: @(Deleted)

Added subscriber: @(Deleted)

Added subscribers: @CharlieJolly, @antoniov

Added subscribers: @CharlieJolly, @antoniov

@CharlieJolly could you take a look?

@CharlieJolly could you take a look?
Charlie Jolly was assigned by Sebastian Parborg 2019-04-12 18:27:45 +02:00
Member

I'll patch this, same bug occurred in the branch.

I'll patch this, same bug occurred in the branch.
Author

This issue was referenced by 96e10dc2a5

This issue was referenced by 96e10dc2a53769996606fc6f327c1602b3e88007
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63513
No description provided.