Fix T63513: Gpencil - Circle guide activation with shortcut "C" is not working properly

Only add missing events after first point is added.